# snl-progress-tests

./: .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml  requirements.txt  test-roadmap.md
docs/source/: conf.py  index.rst  modules.rst
progress/: __main__.py  data_download_process.py  example_job.bash  example_simulation.py  example_simulation_mult_proc.py  input.yaml  main_MPI.py  mod_kmeans.py  mod_matrices.py  mod_plot.py  mod_solar.py  mod_sysdata.py  mod_utilities.py  mod_wind.py  resources.qrc  resources_rc.py
progress/App/: MainWindow.py  mainwindow.ui
progress/Data/Solar/: solar_data.xlsx  solar_sites.csv
progress/Data/System/: branch.csv  bus.csv  gen.csv  load.csv  storage.csv
progress/Data/Wind/: w_power_curves.csv  wind_sites.csv  windspeed_data.csv
tests/: test_kmeans.py  test_solar.py
third-party software licenses/: kneed.txt  mpi4py.txt  openpyxl.txt  pvlib.txt  requests.txt
