[tool.poetry]
name = "progress"
version = "0.0.5"
description = "Used to evaluate the reliability of a power system and size energy storage systems required for maintaining a certain reliability level"
authors = ["Atri Bera <abera@sandia.gov>"]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://example.com"
repository = "https://github.com/atribera/quest_reliability"
documentation = "https://example.com"
keywords = ["reliability", "power system", "energy storage"]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
numpy = ">=1.21.0, <2.0.0"
pyomo = "6.7.3"
pandas = "2.2.2"
mpi4py = "3.1.6"
matplotlib = "3.9.0"
openpyxl = "3.1.4"
seaborn = "0.13.2"
scikit-learn = "1.5.0"
kneed = "0.8.5"
requests = "2.32.3"
pvlib = "0.11.0"
NREL-rex = "0.2.86"
PySide6 = "6.5.2"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

exclude = [
    "main_app.py",
    "resources.qrc",
    "resources_rc.py",
    "Results/*",
    "start/*",
    "Images/*",
    "__pycache__/*",
    "docs/*",
    ".readthedocs.yaml",
    "licenses/*"
]

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = "primary"

